# tree-sitter-wlanguage

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.wlanguage  tree-sitter.json
bindings/c/: tree-sitter-wlanguage.h  tree-sitter-wlanguage.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_wlanguage/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWLanguageTests/: TreeSitterWLanguageTests.swift
src/: grammar.json  node-types.json  parser.c
